# journalgenerator

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/: settings.local.json
py_journal_generator/: __init__.py  __main__.py  dot_journal_page.py  hex_map_journal_page.py  hexagon.py  journal_page.py  lined_journal_page.py  page_sizes.yaml  pdf.py  square_journal_page.py
tests/: test_dot_journal_page.py  test_hex_map_journal_page.py  test_hexagon.py  test_journal_page.py  test_lined_journal_page.py  test_square_journal_page.py
web/: app.py
