[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-journal-generator"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fpdf2",
    "pyyaml",
]

[project.scripts]
journal-generator = "py_journal_generator.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
exclude = ["web*"]

[tool.setuptools.package-data]
py_journal_generator = ["page_sizes.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
